# MotiCloneDB

./: .editorconfig  .sqruff  Cargo.toml  README.md  diesel.toml  startup.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/01_users/: up.sql
migrations/02_groups/: up.sql
migrations/03_commitments/: down.sql  up.sql
migrations/03_messages/: up.sql
migrations/03_pools/: up.sql
migrations/04_contributions/: up.sql
migrations/04_reactions/: up.sql
migrations/04_workouts/: up.sql
migrations/2025-07-17-165102_commitment/: down.sql  up.sql
migrations/2025-07-17-165231_contribution/: down.sql  up.sql
migrations/2025-07-17-165231_groups/: up.sql
migrations/2025-07-17-165231_messages/: up.sql
migrations/2025-07-17-165231_pool/: down.sql
migrations/2025-07-17-165231_reactions/: up.sql
migrations/2025-07-17-165231_users/: up.sql
migrations/2025-07-17-165231_workouts/: down.sql  up.sql
migrations/2025-07-18-143545_01_user/: up.sql
migrations/2025-07-18-143551_02_group/: down.sql  up.sql
migrations/2025-07-18-143551_02_groups/: up.sql
migrations/2025-07-18-143602_03_commitments/: down.sql
migrations/2025-07-18-143616_03_message/: down.sql  up.sql
migrations/2025-07-18-143616_03_messages/: up.sql
migrations/2025-07-18-143633_04_contributions/: up.sql
migrations/2025-07-18-143644_04_workouts/: up.sql
migrations/2025-07-21-103043_03_groupmember/: down.sql  up.sql
migrations/2025-07-21-103156_03_groupchallenge/: down.sql  up.sql
src/: lib.rs  main.rs  model.rs  models.rs  schema.rs
src/model/: group.rs  (+6 more)
(+11 files in other folders)
